Añadido endpoint con paginación
