# src/main/resources/swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.2
 info:
-  title: Microservicio de Products
+  title: Management
   version: v1
 paths:
   '/stores/{storeId}':
@@ -77,10 +77,42 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/UnexpectedError'
+  /products/paged:
+    get:
+      summary: Get a list of paged products
+      operationId: getPagedProductsFilter
+      parameters:
+        - $ref: '#/components/parameters/productNameQueryParam'
+        - $ref: '#/components/parameters/categoryNameQueryParam'
+        - $ref: '#/components/parameters/minPriceQueryParam'
+        - $ref: '#/components/parameters/maxPriceQueryParam'
+        - $ref: '#/components/parameters/storeIdQueryParam'
+        - $ref: '#/components/parameters/pageNumberQueryParam'
+        - $ref: '#/components/parameters/pageSizeQueryParam'
+        - $ref: '#/components/parameters/sortByQueryParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/PagedResponseProductDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
   /products:
     get:
-      summary: Get a list of products by StoreId
-      operationId: getProductsByStoreId
+      summary: Get a list of products
+      operationId: getProducts
+      parameters:
+        - $ref: '#/components/parameters/productNameQueryParam'
+        - $ref: '#/components/parameters/categoryNameQueryParam'
+        - $ref: '#/components/parameters/minPriceQueryParam'
+        - $ref: '#/components/parameters/maxPriceQueryParam'
+        - $ref: '#/components/parameters/storeIdQueryParam'
       responses:
         '200':
           $ref: '#/components/responses/ListProducts'
@@ -197,7 +229,61 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/storeId'
+    storeIdQueryParam:
+      name: storeId
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/storeId'
+    minPriceQueryParam:
+      name: minPrice
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/minPrice'
+    maxPriceQueryParam:
+      name: maxPrice
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/maxPrice'
+    productNameQueryParam:
+      name: productName
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/productName'
+    categoryNameQueryParam:
+      name: categoryName
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/categoryName'
+    pageNumberQueryParam:
+      name: pageNumberQueryParam
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/pageNumberQueryParam'
+    pageSizeQueryParam:
+      name: pageSizeQueryParam
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/pageSizeQueryParam'
+    sortByQueryParam:
+      name: sortByQueryParam
+      in: query
+      required: false
+      schema:
+        $ref: '#/components/schemas/sortByQueryParam'
   responses:
+    PagedResponseProductDTO:
+      description: OK.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/PagedResponseProductDTO'
     ListStores:
       description: OK.
       content:
@@ -326,6 +412,26 @@ components:
                   One or more fields are invalid. See details for more information.
                 instance: 'https://api.example.com/problems/validation-error/12345'
   schemas:
+    PagedResponseProductDTO:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProductDTO'
+        number:
+          type: integer
+          example: 1
+        size:
+          type: integer
+          example: 25
+        totalElements:
+          type: integer
+          format: int64
+          example: 232
+        totalPages:
+          type: integer
+          example: 23
     CategoryRequestDTO:
       type: object
       properties:
@@ -480,4 +586,43 @@ components:
       format: int64
       minimum: 1
       maximum: 999999999999
+      example: 1
+    maxPrice:
+      title: example
+      description: example
+      type: number
+      format: double
+      minimum: 0.01
+      maximum: 999.99
+      example: 5.99
+    minPrice:
+      title: example
+      description: example
+      type: number
+      format: double
+      minimum: 0.01
+      maximum: 999.99
+      example: 1.99
+    categoryName:
+      type: string
+      example: "Drinks"
+    productName:
+      type: string
+      example: "Drinks"
+    sortByQueryParam:
+      type: string
+      example: "productName"
+    pageNumberQueryParam:
+      title: example
+      description: example
+      type: integer
+      minimum: 1
+      maximum: 99999
+      example: 1
+    pageSizeQueryParam:
+      title: example
+      description: example
+      type: integer
+      minimum: 1
+      maximum: 99999
       example: 1
